--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.122.0",
+    "@aws-cdk/aws-events": "^1.122.0",
+    "@aws-cdk/aws-events-targets": "^1.122.0",
+    "@aws-cdk/aws-lambda": "^1.122.0",
     "@aws-cdk/core": "1.122.0",
+    "aws-sdk": "^2.986.0",
     "source-map-support": "^0.5.16"
   }
 }
